crates/lingui_macro/tests/snapshots/imports__js_should_process_only_elements_imported_from_macro2.snap
---
source: crates/lingui_macro/tests/imports.rs
---
import { t } from "@lingui/core/macro";
import { plural } from "./custom-plural";

 t`Hello World!`;
 plural(value, {one: "...", other: "..."});

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
import { plural } from "./custom-plural";
$_i18n._(/*i18n*/ {
    id: "0IkKj6",
    message: "Hello World!"
});
plural(value, {
    one: "...",
    other: "..."
});
