crates/lingui_macro/tests/snapshots/imports__js_should_support_renamed_imports.snap
---
source: crates/lingui_macro/tests/imports.rs
---
import { t as i18nT, plural as i18nPlural } from "@lingui/core/macro";

 i18nT`Hello World!`;
 i18nPlural(value, {one: "...", other: "..."});

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "0IkKj6",
    message: "Hello World!"
});
$_i18n._(/*i18n*/ {
    id: "kwTAtG",
    message: "{value, plural, one {...} other {...}}",
    values: {
        value: value
    }
});
