crates/lingui_macro/tests/snapshots/imports__jsx_should_process_only_elements_imported_from_macro2.snap
---
source: crates/lingui_macro/tests/imports.rs
---
import { Trans } from "@lingui/react";
import { Plural } from "@lingui/react/macro";

;<Plural
 value={count}
 one="Message"
 other="Messages"
/>

;<Trans>Should be untouched</Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans } from "@lingui/react";
import { Trans as Trans_ } from "@lingui/react";
;
<Trans_ {.../*i18n*/ {
    id: "V4EO9s",
    values: {
        count: count
    },
    message: "{count, plural, one {Message} other {Messages}}"
}}/>;
<Trans>Should be untouched</Trans>;
