crates/lingui_macro/tests/snapshots/imports__jsx_should_support_renamed_imports.snap
---
source: crates/lingui_macro/tests/imports.rs
---
import { Trans as I18nTrans, Plural as I18nPlural } from "@lingui/react/macro";

;<I18nPlural
 value={count}
 one="Message"
 other="Messages"
/>

;<I18nTrans>Hello!</I18nTrans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
;
<Trans_ {.../*i18n*/ {
    id: "V4EO9s",
    values: {
        count: count
    },
    message: "{count, plural, one {Message} other {Messages}}"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "mAYvqA",
    message: "Hello!"
}}/>;
