crates/lingui_macro/tests/snapshots/imports__should_add_imports_after_directive_prologues.snap
---
source: crates/lingui_macro/tests/imports.rs
---
"use client";
 import { t } from "@lingui/core/macro"
 import foo from "bar"
 t`Text`

↓ ↓ ↓ ↓ ↓ ↓

"use client";
import { i18n as $_i18n } from "@lingui/core";
import foo from "bar";
$_i18n._(/*i18n*/ {
    id: "xeiujy",
    message: "Text"
});
