crates/lingui_macro/tests/snapshots/imports__should_add_not_clashing_imports.snap
---
source: crates/lingui_macro/tests/imports.rs
---
import { t } from "@lingui/core/macro";
import { Plural } from "@lingui/react/macro";
import { i18n } from "@lingui/core";
import { Trans } from "@lingui/react";

t`Test`;
<Plural value={value} one="..." other="..."/>;
<Trans>Untouched</Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
import { i18n as $_i18n } from "@lingui/core";
import { i18n } from "@lingui/core";
import { Trans } from "@lingui/react";
$_i18n._(/*i18n*/ {
    id: "NnH3pK",
    message: "Test"
});
<Trans_ {.../*i18n*/ {
    id: "kwTAtG",
    values: {
        value: value
    },
    message: "{value, plural, one {...} other {...}}"
}}/>;
<Trans>Untouched</Trans>;
