crates/lingui_macro/tests/snapshots/imports__should_transform_custom_core_macro_package.snap
---
source: crates/lingui_macro/tests/imports.rs
info:
  macro_packages:
    core:
      - "@acme/core/macro"
    jsx:
      - "@lingui/macro"
      - "@lingui/react/macro"
---
import { t } from "@acme/core/macro";

t`Hello World!`;

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "0IkKj6",
    message: "Hello World!"
});
