crates/lingui_macro/tests/snapshots/imports__should_transform_custom_jsx_macro_package.snap
---
source: crates/lingui_macro/tests/imports.rs
info:
  macro_packages:
    core:
      - "@lingui/macro"
      - "@lingui/core/macro"
    jsx:
      - "@acme/react/macro"
---
import { Trans } from "@acme/react/macro";

;<Trans>Hello!</Trans>

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
;
<Trans_ {.../*i18n*/ {
    id: "mAYvqA",
    message: "Hello!"
}}/>;
